fixed and colored login logo animation on mobile

--- a/styles/login.css
+++ b/styles/login.css
@@ -360,10 +360,18 @@ label {
         margin-bottom: 8px;
         font-size: 48px;
     }
+
+    #join-logo {
+        opacity: 0;
+    }
 }
 
 @media (min-width: 670px) {
     .back-to-login {
         display: none;
+    }
+
+    #mobile-login-logo {
+        opacity: 0;
     }
 }
